<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#2200BCD4"
    tools:context=".view.WelcomeActivity">

    <RelativeLayout
        android:id="@+id/app_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/label_metar_browser"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="italic|bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/btn_label_search_code"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/btn_search_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:drawable/dialog_holo_dark_frame"
                android:backgroundTint="@android:color/holo_green_dark"
                android:src="@drawable/img_search"
                android:onClick="onSearchByCode"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/btn_label_search_from_list"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/btn_search_german_station"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:drawable/dialog_holo_dark_frame"
                android:backgroundTint="@android:color/holo_green_dark"
                android:src="@drawable/img_list"
                android:onClick="onSearchFromGermanStation"/>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>