<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.metarbrowser.viewmodel.MetarDetailsViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/pBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="@{viewModel.isDataDownloadProgress ? View.VISIBLE : View.GONE}"/>

        <ScrollView
            android:fillViewport="true"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.isDataDownloadProgress ? View.GONE : View.VISIBLE}">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/lyt_detail_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/txt_internet_status"
                    android:background="@android:drawable/dialog_holo_light_frame"
                    android:visibility="@{viewModel.isDataAvailable() ? View.VISIBLE : View.INVISIBLE}">

                    <TextView
                        android:id="@+id/txt_cached_data_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:text="@string/txt_last_available_update"
                        android:visibility="@{viewModel.hasCachedDataAvailability ? View.VISIBLE : View.GONE}"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/txt_station_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.stationName}"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@+id/txt_cached_data_status"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="30dp"/>

                    <TextView
                        android:id="@+id/txt_icao_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.stationCode}"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@+id/txt_station_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:id="@+id/last_updated_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.lastUpdatedTime}"
                        android:textSize="15sp"
                        android:textStyle="italic"
                        app:layout_constraintTop_toBottomOf="@+id/txt_icao_code"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"/>

                    <LinearLayout
                        android:id="@+id/lyt_decoded_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/dialog_holo_light_frame"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@id/last_updated_time"
                        android:layout_marginTop="30dp">

                        <TextView
                            android:id="@+id/txt_label_decoded_data"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_decoded_data"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintTop_toTopOf="parent"
                            android:gravity="center_horizontal"
                            android:layout_marginTop="10dp"/>

                        <TextView
                            android:id="@+id/txt_decoded_data"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.decodedData}"
                            android:textSize="15sp"
                            android:textStyle="italic"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lyt_raw_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/dialog_holo_light_frame"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@id/lyt_decoded_data"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:id="@+id/txt_label_raw_data"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_raw_data"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintTop_toTopOf="parent"
                            android:gravity="center_horizontal"
                            android:layout_marginTop="10dp"/>

                        <TextView
                            android:id="@+id/txt_raw_data"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.rawData}"
                            android:textSize="15sp"
                            android:textStyle="italic"
                            app:layout_constraintTop_toTopOf="parent"
                            android:gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"/>

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/txt_internet_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_red_light"
                    android:text="@string/txt_no_internet_connectivity"
                    android:visibility="@{viewModel.hasNetworkConnectivity ? View.GONE : View.VISIBLE}"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/txt_station_availability"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/txt_internet_status"
                    android:layout_marginTop="20dp"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_red_light"
                    android:text="@string/txt_airport_not_found"
                    android:visibility="@{viewModel.isStationAvailable ? View.GONE : View.VISIBLE}"
                    android:gravity="center"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </RelativeLayout>
</layout>